# baseball-cpp

./: .clang-format  .clang-tidy  .gitignore  2025BAL.EVA  AGENTS.md  CMakeLists.txt  EventSource.cpp  EventSource.h  EventSource.hpp  Simulator.cpp  Simulator.h  Simulator.hpp  SimulatorObserver.h  SimulatorObserver.hpp  StaticEventSource.cpp  StaticEventSource.h  TODO.md  main.cpp  team2025  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml
data/matrices_2025/: 0_out_1st.csv  0_out_1st_and_2nd.csv  0_out_1st_and_3rd.csv  0_out_2nd.csv  0_out_2nd_and_3rd.csv  0_out_3rd.csv  0_out_Empty.csv  0_out_Loaded.csv  1_out_1st.csv  1_out_1st_and_2nd.csv  1_out_1st_and_3rd.csv  1_out_2nd.csv  1_out_2nd_and_3rd.csv  1_out_3rd.csv  1_out_Empty.csv  1_out_Loaded.csv  2_out_1st.csv  2_out_1st_and_2nd.csv  2_out_1st_and_3rd.csv  2_out_2nd.csv  2_out_2nd_and_3rd.csv  2_out_3rd.csv  2_out_Empty.csv  2_out_Loaded.csv
include/: EventSource.hpp  Game.hpp  GameState.hpp  IGame.hpp  IGameState.hpp  MatrixData.hpp  MatrixEventSource.hpp  MatrixLoader.hpp  RandomEventSource.hpp  Records.hpp  Scorebook.hpp  Simulator.hpp  SimulatorObserver.hpp  StaticEventSource.hpp
include/chadwick/: Game.hpp  GameState.hpp  Scorebook.hpp
scripts/: aggregate_transitions.py  extract_data.py  run-quality-checks.sh
src/: Game.cpp  GameState.cpp  MatrixEventSource.cpp  MatrixLoader.cpp  RandomEventSource.cpp  Scorebook.cpp  Simulator.cpp  StaticEventSource.cpp  main.cpp
src/chadwick/: Game.cpp  GameState.cpp  Scorebook.cpp
tests/: 2025TEST.EVA  CMakeLists.txt  SimulatorIntegrationTests.cpp  SimulatorTests.cpp
tests/fixtures/: 2025ALCS.EVE  2025ALD1.EVE  2025ALD2.EVE  2025ALW1.EVE  2025ALW2.EVE  2025ANA.EVA  2025ARI.EVN  2025AS.EVE  2025ATH.EVA  2025ATL.EVN  2025BAL.EVA  2025BOS.EVA  2025CHA.EVA  2025CHN.EVN  2025CIN.EVN  2025CLE.EVA  2025COL.EVN  2025DET.EVA  2025HOU.EVA  2025KCA.EVA  2025LAN.EVN  2025MIA.EVN  2025MIL.EVN  2025MIN.EVA  2025NLCS.EVE  2025NLD1.EVE  2025NLD2.EVE  2025NLW1.EVE  2025NLW2.EVE  2025NYA.EVA  2025NYN.EVN  2025PHI.EVN  2025PIT.EVN  2025SDN.EVN  2025SEA.EVA  2025SFN.EVN  2025SLN.EVN  2025TBA.EVA  2025TEX.EVA  2025TOR.EVA  (+2 more)
tests/integration/: SimulatorTests.cpp
tests/integration/fixtures/: 2025ALCS.EVE  2025ALD1.EVE  2025ALD2.EVE  2025ANA.EVA  2025BOS.EVA  2025CIN.EVN  2025CLE.EVA  2025KCA.EVA  2025MIA.EVN  2025NLW2.EVE  2025SEA.EVA  2025SFN.EVN  2025SLN.EVN  2025TOR.EVA  2025WAS.EVN
tests/integration/fixtures/2021/: 2021ATL.EVN  2021BOS.EVA  2021MIN.EVA  2021WAS.EVN
tests/integration/fixtures/2022/: 2022ARI.EVN  2022MIA.EVN  2022NLD1.EVE  2022PIT.EVN
tests/integration/fixtures/2023/: 2023ALCS.EVE  2023ATL.EVN  2023DET.EVA  2023MIL.EVN  2023MIN.EVA  2023NYN.EVN  2023SLN.EVN
tests/integration/fixtures/2024/: 2024BAL.EVA  2024CIN.EVN  2024COL.EVN  2024DET.EVA  2024MIA.EVN  2024MIN.EVA  2024NYA.EVA  2024NYN.EVN  2024SLN.EVN  2024TOR.EVA
tests/integration/fixtures/2025/: 2025ATH.EVA  2025CHN.EVN  2025LAN.EVN  2025MIN.EVA  2025NLCS.EVE  2025NLD1.EVE  2025NYN.EVN  2025PIT.EVN  2025TBA.EVA
tests/unit/: GameStateTests.cpp  MatrixEventSourceTests.cpp  RandomEventSourceTests.cpp  SimulatorTests.cpp
tools/: normalize_retrosheet.cpp
